...
        app:layout_constraintTop_toTopOf="@id/searchEditText"
        app:layout_constraintVertical_bias="1.0" />



    <GridView
        android:id="@+id/itemGrid"
        android:layout_width="408dp"
        android:layout_height="547dp"
        android:columnWidth="90dp"
        android:horizontalSpacing="10dp"
        android:numColumns="1"
        android:verticalSpacing="10dp"
...
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_selector"
        android:padding="8dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addItemButton"
        app:layout_constraintHorizontal_chainStyle="packed" />


    <ImageView
        android:id="@+id/addItemButton"
        android:layout_width="48dp"
...
